v2.3 fixing  text alignment for homepage

--- a/src/Homepage/homepage.scss
+++ b/src/Homepage/homepage.scss
@@ -9,6 +9,7 @@
     margin-bottom: 2vh;
     
     &__welcome{
+        text-align: center;
     height: 100vh;
     color:$saffron;
 
@@ -252,7 +253,7 @@
     }
 
     &__news{
-        
+        text-align: center;
         @include padding-center;
         &-heading{
             @include heading;
